c.txt
C:\Users\tatum>py
Python 3.8.5 (tags/v3.8.5:580fbb0, Jul 20 2020, 15:43:08) [MSC v.1926 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 2 + 2
4
>>> 3 * 10
30
>>> 100 - 10
90
>>> 25 / 5
5.0
>>> 10 / 3
3.3333333333333335
>>> 10 //3
3
>>> # Tatum
>>> print('Mijn naam is Tatum')
Mijn naam is Tatum
>>> naam = 'Tatum'
>>> print(naam)
Tatum
>>> print(naam.upper())
TATUM
>>> print(naam[0:2])
Ta
>>> print(naam[naam::-1])
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: slice indices must be integers or None or have an __index__ method
>>> #Tatum
>>> leeftijd = 15
>>> print('Hallo ' + naam + ' ben je al ' + str(leeftijd) + ' jaar?')
Hallo Tatum ben je al 15 jaar?
>>> leeftijd = leeftijd + 1
>>> leeftijd
16
>>> leeftijd-=1
>>> leeftijd
15
>>> if leeftijd < 18:
... hoelang_tot18jaar = 18 leeftijd
  File "<stdin>", line 2
    hoelang_tot18jaar = 18 leeftijd
    ^
IndentationError: expected an indented block
>>> print9'Over ' + str(hoelang_tot18jaar) + ' jaar wordt je 18')
  File "<stdin>", line 1
    print9'Over ' + str(hoelang_tot18jaar) + ' jaar wordt je 18')
          ^
SyntaxError: invalid syntax
>>> elif leeftijd > 18:
  File "<stdin>", line 1
    elif leeftijd > 18:
    ^
SyntaxError: invalid syntax
>>>     hoelang_al18jaar = leeftijd - 18
  File "<stdin>", line 1
    hoelang_al18jaar = leeftijd - 18
    ^
IndentationError: unexpected indent
>>>     print('Het is alweer ' + str(hoelang_al18jaar) + ' jaar geleden dat je 18 werd ;-)')
  File "<stdin>", line 1
    print('Het is alweer ' + str(hoelang_al18jaar) + ' jaar geleden dat je 18 werd ;-)')
    ^
IndentationError: unexpected indent
>>> else:
  File "<stdin>", line 1
    else:
    ^
SyntaxError: invalid syntax
>>>     print('Je bent precies ' + str(leeftijd) + ' jaar')
  File "<stdin>", line 1
    print('Je bent precies ' + str(leeftijd) + ' jaar')
    ^
IndentationError: unexpected indent
>>>     # Let op: hier 2x een enter doen!
>>> # Willekeurige getallen genereren
>>> from random import randint
>>> randint(0,1000)
214
>>> willekeurig_getal = randint(0,1000)
>>> willekeurig_getal
934
>>> print('Willekeurig getal tussen 0 en 1000: ' + str(willekeurig_getal))
Willekeurig getal tussen 0 en 1000: 934
>>>
>>> # Datum en tijd
>>> from datetime import datetime
>>> datum = datetime.now()
>>> print(datum)
2020-09-11 15:28:03.569658
>>> datum.strftime('%A %d %B %Y')
'Friday 11 September 2020'
>>>
>>> # Nu in een andere taal
>>> import locale
>>> locale.setlocale(locale.LC_TIME, 'nl_NL')
'nl_NL'
>>> datum.strftime('%A %d %B %Y')
'vrijdag 11 september 2020'
>>> locale.setlocale(locale.LC_TIME, 'it_IT')
'it_IT'
>>> datum.strftime('%A %d %B %Y')
'venerdì 11 settembre 2020'
>>>


